versioned_docs/version-8.0.1/advanced/Target-and-Sensor-support.md
---
title: Target and Sensor Support
---

# Sensor Support

The following table was machine generated by [find_sensors.rb](/img/content/find_sensors.rb) script on 2024-11-18 against INAV 8.0.0-RC1, E&OE

Targets suffixed by \* indicates that there are (probably) multiple hardware variations covered by one or more firmware images (or just a strange target.h). Additional, related targets are listed in parentheses. The user may check the hardware documentation (or `target.h` / `CMakeLists.txt`) to determine the actual supported sensors.

| Target |  IMU | Baro | Mag  | Rangefinder |
| ------ | ---- | ---- | ---- | ----------- |
| AIRBOTF4 | MPU6000 MPU6500 | BMP085 BMP280 MS5611 | ALL |  |
| ANYFCF7 \* (ANYFCF7_EXTERNAL_BARO) | MPU6000 | BMP085 BMP280 MS5611 | ALL |  |
| AOCODARCF405AIO | BMI270 MPU6000 MPU6500 | BMP280 DPS310 MS5611 SPL06 | ALL | MSP |
| AOCODARCF4V2 | MPU6000 MPU6500 | BMP280 DPS310 MS5611 | ALL |  |
| AOCODARCF4V3 \* (AOCODARCF4V3) | ICM42605 MPU6000 MPU6500 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| AOCODARCF722AIO | ICM42605 MPU6000 MPU6500 | BMP280 DPS310 MS5611 SPL06 | ALL | MSP |
| AOCODARCF7DUAL | BMI270 MPU6000 | BMP280 DPS310 MS5607 MS5611 | ALL |  |
| AOCODARCF7MINI \* (AOCODARCF7MINI_V2) | MPU6000 MPU6500 | BMP280 DPS310 MS5611 | ALL |  |
| AOCODARCH7DUAL | BMI270 MPU6000 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| ATOMRCF405NAVI | BMI270 | BMP085 BMP280 DPS310 MS5611 SPL06 | ALL | MSP |
| ATOMRCF405NAVI_DELUX | ICM42605 | ALL | ALL | MSP |
| AXISFLYINGF7PRO | BMI270 ICM42605 MPU6000 | BMP280 DPS310 SPL06 | ALL |  |
| BEEROTORF4 | MPU6500 | BMP280 | ALL |  |
| BETAFLIGHTF4 | MPU6000 | BMP085 BMP280 MS5611 | ALL |  |
| BETAFPVF722 | BMI270 ICM42605 MPU6000 | BMP085 BMP280 DPS310 MS5611 SPL06 | ALL |  |
| DAKEFPVF405 | BMI270 ICM42605 MPU6000 MPU6500 | BMP280 DPS310 | ALL | MSP |
| DAKEFPVF722 | BMI270 ICM42605 MPU6000 MPU6500 | BMP280 | ALL | MSP |
| DALRCF405 | MPU6000 MPU6500 | BMP085 BMP280 MS5611 | ALL |  |
| DALRCF722DUAL | MPU6000 | ALL | ALL |  |
| FF_F35_LIGHTNING \* (WINGFC) | MPU9250 | BMP280 | MPU9250 |  |
| FIREWORKSV2 \* (OMNIBUSF4V6) | MPU6000 MPU6500 | BMP280 | ALL |  |
| FLASHHOBBYF405 | BMI270 ICM42605 MPU6000 | ALL | ALL |  |
| FLASHHOBBYF722 | BMI270 ICM42605 MPU6000 | ALL | ALL |  |
| FLYCOLORF7MINI | MPU6500 | BMP280 DPS310 MS5611 | ALL |  |
| FLYCOLORF7V2 | MPU6500 | ALL | ALL |  |
| FLYWOOF405PRO \* (FLYWOOF405HD) | BMI270 ICM42605 MPU6000 | BMP085 BMP280 DPS310 MS5611 SPL06 | ALL | HCSR04_I2C |
| FLYWOOF722PRO | BMI270 ICM42605 MPU6000 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| FLYWOOF745 \* (FLYWOOF745NANO) | BMI270 ICM42605 MPU6000 | BMP085 BMP280 DPS310 MS5611 SPL06 | ALL |  |
| FLYWOOF7DUAL | MPU6000 MPU6500 | BMP280 MS5611 | ALL |  |
| FLYWOOH743PRO | ICM42605 | BMP280 DPS310 MS5611 SPL06 | ALL RM3100 |  |
| FOXEERF405 | MPU6000 MPU6500 | BMP085 BMP280 MS5611 | ALL |  |
| FOXEERF722DUAL \* (FOXEERF722V2) | MPU6000 MPU6500 | BMP280 MS5611 | ALL |  |
| FOXEERF722V4 \* (FOXEERF722V4_X8) | ICM42605 MPU6000 MPU6500 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| FOXEERF745AIO \* (FOXEERF745AIO_V3) | ICM42605 MPU6000 | BMP280 MS5611 | ALL |  |
| FOXEERH743 | MPU6000 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| FRSKYPILOT \* (FRSKYPILOT_LED) | MPU6000 MPU6500 | SPL06 | ALL |  |
| FURYF4OSD \* (MAMBAF405) | ICM42605 MPU6000 MPU6500 | ALL | ALL | MSP |
| GEPRCF405 | BMI270 ICM42605 MPU6000 | BMP280 DPS310 MS5611 | ALL |  |
| GEPRCF405_BT_HD | BMI270 ICM42605 MPU6000 | BMP280 DPS310 MS5611 | ALL |  |
| GEPRCF722 | BMI270 ICM42605 MPU6000 | BMP280 DPS310 MS5611 | ALL |  |
| GEPRCF722_BT_HD | BMI270 ICM42605 MPU6000 | BMP280 DPS310 MS5611 | ALL |  |
| GEPRCF745_BT_HD | ICM42605 MPU6000 | BMP280 DPS310 MS5611 | ALL |  |
| GEPRC_F722_AIO \* (GEPRC_F722_AIO_UART3) | BMI270 ICM42605 MPU6000 | BMP280 DPS310 MS5611 | ALL |  |
| HAKRCF405D | BMI270 ICM42605 MPU6000 | BMP280 DPS310 SPL06 | ALL | MSP |
| HAKRCF405V2 | BMI270 ICM42605 MPU6000 | BMP280 DPS310 SPL06 | ALL | MSP |
| HAKRCF722V2 | BMI270 ICM42605 MPU6000 | BMP280 DPS310 SPL06 | ALL |  |
| HAKRCKD722 | BMI270 ICM42605 MPU6000 | BMP280 DPS310 MS5611 SPL06 | ALL | MSP |
| HGLRCF722 | BMI270 MPU6000 | BMP280 DPS310 MS5611 SPI_BMP280 | ALL |  |
| IFLIGHTF7_TWING | MPU6500 | ALL | ALL |  |
| IFLIGHT_2RAW_H743 | ICM42605 | ALL | ALL |  |
| IFLIGHT_BLITZ_ATF435 | BMI270 ICM42605 | ALL | ALL |  |
| IFLIGHT_BLITZ_F722 \* | BMI270 ICM42605 MPU6000 | BMP280 DPS310 MS5611 | ALL |  |
| IFLIGHT_BLITZ_F722_X1 \* (IFLIGHT_BLITZ_F722_X1_OSD) | BMI270 ICM42605 | ALL | ALL |  |
| IFLIGHT_BLITZ_F7_PRO | BMI270 MPU6000 | BMP280 DPS310 | ALL |  |
| IFLIGHT_BLITZ_H7_PRO \* (IFLIGHT_BLITZ_H7_WING) | ICM42605 | ALL | ALL |  |
| IFLIGHT_JBF7PRO | BMI270 MPU6000 | BMP280 DPS310 | ALL |  |
| JHEMCUF405 | BMI270 ICM42605 MPU6000 | BMP085 BMP280 DPS310 MS5611 SPL06 | ALL | HCSR04_I2C |
| JHEMCUF405WING | ICM42605 | ALL | ALL |  |
| JHEMCUF722 | BMI270 ICM42605 MPU6000 | BMP280 DPS310 MS5611 SPL06 | ALL | MSP |
| JHEMCUF745 | ICM42605 MPU6000 | ALL | ALL |  |
| JHEMCUH743HD | BMI270 ICM42605 MPU6000 | ALL | ALL |  |
| KAKUTEF4 \* (KAKUTEF4V2 KAKUTEF4V23 KAKUTEF4V24) | ICM42605 MPU6000 MPU6500 |  |  |  |
| KAKUTEF4WING | ICM42605 | BMP280 DPS310 SPL06 | ALL |  |
| KAKUTEF7 \* (KAKUTEF7HDV KAKUTEF7MINI) | ICM20689 MPU6000 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| KAKUTEF7MINIV3 | ICM42605 MPU6000 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| KAKUTEH7 \* (KAKUTEH7V2 KAKUTEH7MINI) | BMI270 ICM42605 MPU6000 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| KAKUTEH7WING | BMI088 ICM42605 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| MAMBAF405US \* (MAMBAF405US_I2C) | MPU6000 MPU6500 | BMP280 DPS310 MS5611 | ALL |  |
| MAMBAF405_2022A \* (MAMBAF405_2022B) | BMI270 ICM42605 MPU6000 MPU6500 | BMP085 BMP280 DPS310 MS5611 SPL06 | ALL |  |
| MAMBAF722 \* (MAMBAF722_I2C) | MPU6000 MPU6500 | BMP280 MS5611 | ALL |  |
| MAMBAF722_2022A \* (MAMBAF722_2022B) | BMI270 ICM42605 MPU6000 MPU6500 | BMP085 BMP280 DPS310 MS5611 SPL06 | ALL |  |
| MAMBAF722_WING | ICM42605 | BMP085 BMP280 DPS310 MS5611 SPL06 | ALL |  |
| MAMBAF722_X8 | MPU6000 | BMP280 MS5611 | ALL |  |
| MAMBAH743 \* (MAMBAH743_2022B MAMBAH743_2022B_GYRO2) | BMI270 ICM42605 MPU6000 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| MATEKF405 \* (MATEKF405OSD) | MPU6000 MPU6500 | BMP085 BMP280 DPS310 MS5611 SPL06 | ALL | MSP |
| MATEKF405CAN | MPU6500 | BMP280 DPS310 MS5611 SPL06 | ALL RM3100 |  |
| MATEKF405SE \* (MATEKF405SE_PINIO) | ICM42605 MPU6000 | BMP085 BMP280 DPS310 MS5611 SPL06 | ALL | US42 |
| MATEKF405TE \* (MATEKF405TE_SD) | BMI270 ICM42605 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| MATEKF722 | MPU6500 | BMP085 BMP280 DPS310 MS5611 SPL06 | ALL |  |
| MATEKF722PX \* (MATEKF722PX_PINIO MATEKF722WPX) | MPU6000 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| MATEKF722SE \* (MATEKF722MINI) | MPU6000 MPU6500 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| MATEKF765 \* (MATEKF765SE) | ICM42605 MPU6000 MPU6500 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| MATEKH743 \* (MATEKH743HD) | ICM42605 MPU6000 MPU6500 | BMP280 DPS310 MS5611 SPL06 | ALL RM3100 |  |
| MICOAIR405MINI | BMI270 | DPS310 | ALL | MSP |
| MICOAIR405V2 | BMI088 | SPL06 | ALL | MSP |
| MICOAIR743 \* (MICOAIR743_EXTMAG) | BMI088 | DPS310 | ALL | MSP |
| NEUTRONRCF435MINI | BMI270 ICM42605 LSM6DXX MPU6500 | BMP280 DPS310 | ALL |  |
| NEUTRONRCF435SE | BMI270 ICM42605 LSM6DXX MPU6500 | BMP280 DPS310 | ALL |  |
| NEUTRONRCF435WING | BMI270 ICM42605 LSM6DXX MPU6500 | BMP280 DPS310 | ALL |  |
| NEUTRONRCH7BT | BMI270 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| OMNIBUSF4 \* (DYSF4PROV2 OMNIBUSF4 OMNIBUSF4PRO OMNIBUSF4V3_S5_S6_2SS OMNIBUSF4V3_S5S6_SS OMNIBUSF4V3_S6_SS OMNIBUSF4V3) | BMI270 MPU6000 MPU6500 | BMP085 BMP280 MS5611 | ALL |  |
| OMNIBUSF7 \* (OMNIBUSF7V2) | MPU6000 MPU6500 | BMP280 | ALL |  |
| OMNIBUSF7NXT | MPU6000 MPU6500 | LPS25H | ALL |  |
| PIXRACER | MPU6500 MPU9250 | MS5611 | ALL |  |
| PRINCIPIOTF7 | ICM42605 | DPS310 | ALL |  |
| REVO | MPU6000 | MS5611 | ALL |  |
| RUSH_BLADE_F7 \* (RUSH_BLADE_F7_HD) | ICM42605 MPU6000 | BMP280 DPS310 MS5611 SPL06 | ALL | MSP |
| SAGEATF4 | BMI088 BMI270 ICM42605 MPU6000 MPU6500 MPU9250 | BMP280 DPS310 | ALL |  |
| SDMODELH7V1 | BMI270 MPU6000 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| SITL | FAKE | FAKE | FAKE | FAKE |
| SKYSTARSF405HD \* (SKYSTARSF405HD2) | BMI270 ICM42605 MPU6000 | BMP280 | ALL | MSP |
| SKYSTARSF722HD \* (SKYSTARSF722HDPRO SKYSTARSF722MINIHD) | BMI270 ICM42605 MPU6000 | BMP280 SPL06 | ALL | MSP |
| SKYSTARSH743HD | BMI270 | BMP280 DPS310 MS5611 SPL06 | ALL |  |
| SPEDIXF405 | BMI270 ICM42605 MPU6000 | ALL | ALL |  |
| SPEDIXF722 | BMI270 ICM42605 MPU6000 | DPS310 | ALL |  |
| SPEEDYBEEF405MINI | ICM42605 | BMP280 DPS310 MS5611 | ALL |  |
| SPEEDYBEEF405V3 | BMI270 | BMP280 DPS310 MS5611 SPL06 | ALL | MSP |
| SPEEDYBEEF405V4 | ICM42605 | BMP085 BMP280 DPS310 MS5611 SPL06 | ALL |  |
| SPEEDYBEEF405WING | ICM42605 | BMP085 BMP280 DPS310 MS5611 SPL06 | ALL |  |
| SPEEDYBEEF7 | ICM20689 | BMP280 | ALL |  |
| SPEEDYBEEF745AIO | BMI270 MPU6000 | BMP280 DPS310 MS5611 SPL06 | ALL | MSP |
| SPEEDYBEEF7MINI \* (SPEEDYBEEF7MINIV2) | BMI270 MPU6000 | BMP280 DPS310 MS5611 | ALL |  |
| SPEEDYBEEF7V2 | MPU6000 | BMP280 DPS310 | ALL | MSP |
| SPEEDYBEEF7V3 | BMI270 MPU6000 | BMP280 DPS310 MS5611 SPL06 | ALL | MSP |
| SPRACINGF4EVO | MPU6500 MPU9250 | BMP280 MS5611 | ALL |  |
| TAKERF722SE | ICM42605 MPU6000 | BMP280 DPS310 MS5611 | ALL |  |
| TBS_LUCID_FC | ICM42605 MPU6000 | BMP388 | ALL |  |
| TBS_LUCID_H7 | ICM42605 MPU6000 | DPS310 | ALL |  |
| TMOTORF7V2 | ICM42605 MPU6000 | ALL | ALL |  |
| TMOTORVELOXF7V2 | ICM42605 | ALL | ALL |  |
| TUNERCF405 | BMI270 | BMP280 DPS310 | ALL |  |
| ZEEZF7 \* (ZEEZF7V2 ZEEZF7V3) | BMI270 ICM42605 MPU6000 | BMP280 BMP388 DPS310 | ALL | MSP |
